--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shopping-cart",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://eyuhar.github.io/",
+  "homepage": "https://eyuhar.github.io/shopping-cart",
   "type": "module",
   "scripts": {
     "dev": "vite",
